--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <!-- Здесь применять вашу самую сильную магию -->
+        Это же очевидно!
     </body>
 </html>
