--- a/index.html
+++ b/index.html
@@ -42,6 +42,17 @@
             Ула растила его сама, любила безмерно и понимала, что если умрет, то мальчик останется один и совсем пропадет.
             Воспитала, поставила на ноги, женила, понянчила внуков.
         </p>
+        <h3>В этом выпуске</h3>
+        <ul>
+            <li>История алкоголизма. Почему азиатки спиваются быстрее всего?
+            <li>Гуф:"Айза - Тварь, но любимая"
+            <li>Улунбек и правда. Что на самом деле делают киргизы в Москве
+            <li>Дмитрий Тарасов:"Бузова, пошла нахуй!"
+        </ul>
+        <h4></h4>
        
     </body>
+    <article>
+        
+    </article>
 </html>
