--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>DeLorean DMC-12</title>
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="index4.css">
     </head>
     <header>
         <h1>ЭТО ЖЕ ОЧЕВИДНО</h1>
