--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="index4.css">
     </head>
     <header>
+	<img src=https://drugastrananadusata.files.wordpress.com/2013/11/eyes_by_121an.jpg height="150" width="375">
         <h1>ЭТО ЖЕ ОЧЕВИДНО</h1>
     </header>
     <body>
@@ -53,6 +54,6 @@
        
     </body>
     <article>
-        ОБОССАТЬСЯ
+      ОБОССАТЬСЯ
     </article>
 </html>
