--- a/index.html
+++ b/index.html
@@ -56,7 +56,63 @@
             <li>Дмитрий Тарасов:"Бузова, пошла нахуй!"
         </ul>
         <h4>Спорт</h4>
-		<p> </p>
+            <p><span>Футбол и канабис</span></p>
+            <p><span>Автор: Роман Ляховенко</span></p>
+            <p>
+            Марихуана и кокаин – вот два наиболее распространенных в футбольной среде наркотика. 
+            О них и их жертвах – наш сегодняшний рассказ.
+
+            <p><span>ДЕЛЬФИНЫ И КАННАБИС ДЛЯ БАРТЕЗА</span></p>
+
+            Одним из главных любителей «дунуть» среди футболистов является голкипер «МЮ» и сборной Франции Фабьен Бартез. 
+            По части увлечений Фабьен вообще даст фору любому — 
+                в свободное от футбольных и наркотических экспериментов время он любит поплавать в бассейне, 
+                полном дельфинов (хорошо хоть не пираний!). 
+                Что до обожаемого французом каннабиса, то он, по словам игрока, 
+                помогает ему в буддистской практике и способствует постижению глубин мироздания.
+ Пагубное пристрастие к травке уже сыграло с футболистом злую шутку. 
+                В 1996 году Бартез должен был ехать на чемпионат Европы основным вратарем, 
+                но попался на употреблении каннабиса и заработал четырехмесячную дисквалификацию, уступив пост №1 Бернару Лама. 
+                Самое смешное, что тот, отыграв турнир, также решил расслабиться… 
+                Сам инцидент произошел во время тренировочного сбора французской команды перед товарищеской игрой с голландцами. 
+                Обкуренного в доску Бернара застукал тренер, после чего горе-растаман был немедленно отчислен из сборной.
+
+<p><span>РУССКИЙ РАСТАМАН ПЛОХО КОНЧИЛ</span></p>
+
+Российский футбол также делегировал в интернациональную семью растаманов своего представителя. 
+                Им стал талантливый, но чрезвычайно неуравновешенный Александр Рычков, карьера которого началась весьма завидно. 
+                Из бельгийского «Стандарта» Рычков попал в крепкий французский «Ланс», однако… 
+                Там с ним и произошла история, которая повлекла за собой увольнение из клуба. 
+                Случилось это в том же 1996 году, когда провинились Лама и Бартез. 
+                Сценарий был совершенно обычным: допинг-проба, положительный тест на наличие марихуаны в крови, 
+                два месяца дисквалификации и… перст директора клуба, указавший на дверь. 
+                Сам россиянин всячески отрицал свою вину, с пеной у рта доказывая всем, что марихуану ему подложили… в торт.
+                Любопытно, что этот эпизод так и не научил Александра жить правильно: 
+                через несколько лет он за систематические прогулы и 
+                опоздания был отчислен из швейцарского «Базеля» и закончил с серьезным футболом в самом расцвете сил.
+
+            <p><span>КОКС ОТ КОЗА НОСТРЫ</span></p>
+
+Отношения Марадоны с кокаином имеют длинную и весьма поучительную историю. 
+                Впервые Диего попробовал этот наркотик, переехав после ЧМ-1982 в «Барселону». 
+                22-летний парень был шибко расстроен из-за того, что ему сразу не удалось заявить о себе во весь голос в Европе. 
+                Нашлись подонки, которые посоветовали Марадоне изгнать депрессию посредством кокаина…
+Отправившись в «Наполи», Диего наконец заставил весь мир узнать о себе. 
+                За семь лет итальянской карьеры аргентинец превратил заштатную команду в суперклуб. 
+                Однако в 1991 году как гром среди ясного неба грянуло известие о том, 
+                что тест на допинг показал наличие в его крови все того же кокаина. 
+                Пикантная подробность: по многочисленным слухам, снабжал его продуктом не кто иной, 
+                как представитель итальянской коза ностры! 
+Пятнадцать месяцев дисквалификации — и знаменитый левша уже никогда не сможет вернуть прежнего себя, мыкаясь по клубам. 
+                Кокаиновые истерии сменялись у Марадоны глубокими депрессиями, 
+                когда он целыми днями просиживал в комнате с задернутыми шторами и откровенно «тормозил», 
+                уставившись в телевизор. 
+                Впрочем, последнее восхождение аргентинца все же состоялось в 1994-м: 
+                тогда он блестяще выступил на первенстве мира, хотя был похож лишь на тень прежнего Марадоны. 
+                Все бы хорошо, но в крови аргентинца обнаружили запрещенный препарат эфедрин, 
+                что повлекло за собой очередное, годичное, отстранение от футбола.
+Увы, на сегодняшний день Марадона может служить живой (пока что) иллюстрацией к медицинским пособиям о вреде наркотиков. 
+           </p>
 		<h5>В России</h5>
 		<p> </p>
 		<h6>В мире</h6>
